# GalDou

./: CMakeLists.txt  README.md
editor/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  FileTreePanel.cpp  FileTreePanel.h  GalHighlighter.cpp  GalHighlighter.h  ScriptEditor.cpp  ScriptEditor.h  ScriptValidator.cpp  ScriptValidator.h  main.cpp
engine/: CMakeLists.txt
engine/audio/: AudioManager.cpp  AudioManager.h
engine/core/: EventBus.cpp  EventBus.h  FlagManager.cpp  FlagManager.h  GameEngine.cpp  GameEngine.h  ScriptParser.cpp  ScriptParser.h
engine/render/: Animator.cpp  Animator.h  RenderScene.cpp  RenderScene.h
engine/ui/: ChoiceWidget.cpp  ChoiceWidget.h  DialogBox.cpp  DialogBox.h
example/: demo.gal
runner/: CMakeLists.txt  EditorPanel.cpp  EditorPanel.h  MainAppWindow.cpp  MainAppWindow.h  PreviewPanel.cpp  PreviewPanel.h  main.cpp
